// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create orders tests Should create correct ct actions from request and mollies order 1`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createOrder",
    "createdAt": "2021-10-08T12:12:02.625Z",
    "request": "{\\"orderNumber\\":\\"1001\\"}",
    "response": "{\\"resource\\":\\"order\\",\\"id\\":\\"ord_dsczl7\\",\\"profileId\\":\\"pfl_VtWA783A63\\",\\"amount\\":{\\"value\\":\\"10.00\\",\\"currency\\":\\"EUR\\"},\\"orderNumber\\":\\"1001\\",\\"_embedded\\":{\\"payments\\":[{\\"resource\\":\\"payment\\",\\"id\\":\\"tr_2hwPMAs5qU\\",\\"description\\":\\"Order 1001\\",\\"profileId\\":\\"pfl_VtWA783A63\\",\\"orderId\\":\\"ord_ufqybf\\"}]}}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`Create orders tests Should create correct ct actions from request and mollies order 2`] = `
Object {
  "action": "setCustomField",
  "name": "createOrderResponse",
  "value": "{\\"resource\\":\\"order\\",\\"id\\":\\"ord_dsczl7\\",\\"profileId\\":\\"pfl_VtWA783A63\\",\\"amount\\":{\\"value\\":\\"10.00\\",\\"currency\\":\\"EUR\\"},\\"orderNumber\\":\\"1001\\",\\"_embedded\\":{\\"payments\\":[{\\"resource\\":\\"payment\\",\\"id\\":\\"tr_2hwPMAs5qU\\",\\"description\\":\\"Order 1001\\",\\"profileId\\":\\"pfl_VtWA783A63\\",\\"orderId\\":\\"ord_ufqybf\\"}]}}",
}
`;

exports[`Create orders tests Should create correct ct actions from request and mollies order 3`] = `
Object {
  "action": "setCustomField",
  "name": "mollieOrderStatus",
  "value": "created",
}
`;

exports[`Create orders tests Should create correct ct actions from request and mollies order 4`] = `
Object {
  "action": "setKey",
  "key": "ord_dsczl7",
}
`;

exports[`Create orders tests Should create correct ct actions from request and mollies order 5`] = `
Object {
  "action": "addTransaction",
  "transaction": Object {
    "amount": undefined,
    "interactionId": "tr_2hwPMAs5qU",
    "timestamp": undefined,
    "type": "Charge",
  },
}
`;
